# Spelly

./: .Dockerfile  .doxygen  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  DockerfileTests  Language.h  Matrix.h  README.md  Trie.cpp  Trie.h  TrieNode.h  Utils.h  Word.cpp  Word.h  WordList.cpp  WordList.h  main.cpp
datas/: french_test.txt
docs/: _correction_8h_source.html  _interaction_8h_source.html  _language_8h_source.html  _matrix_8h_source.html  _trie_8h_source.html  _trie_node_8h_source.html  _utils_8h_source.html  _word_8h_source.html  _word_list_8h_source.html  annotated.html  class_correction-members.html  class_correction.html  class_interaction-members.html  class_interaction.html  class_language-members.html  class_language.html  class_matrix-members.html  class_matrix.html  class_trie-members.html  class_trie.html  class_trie_node-members.html  class_trie_node.html  class_utils-members.html  class_utils.html  class_word-members.html  class_word.html  class_word_list-members.html  class_word_list.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_88826aa2a10e1882b573f502bc7f4b55.html  dir_94938a9229be1b0244cd2530df439708.html  dir_99d0482cf009f9d97a0877749b817f19.html  dir_ae9a93452e2a84339148a16bcf2eb561.html  dir_d6cb5d8065142b8c5cd74e264665d391.html  dir_f9fa464d34ce465a62c56062b1724bfe.html  files.html  functions.html  functions_func.html  index.html
docs/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_2.html  all_3.html  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_7.html  all_7.js  all_8.html  all_9.html  all_a.html  all_a.js  all_b.html  all_b.js  classes_0.html  classes_1.html  classes_2.html  classes_3.html  classes_4.html  classes_5.html  functions_0.html  functions_0.js  functions_1.html  functions_1.js  functions_2.html  functions_2.js  functions_3.html  functions_3.js  functions_4.html  functions_4.js  functions_5.html  functions_5.js  functions_6.html  functions_6.js  functions_7.html  (+4 more)
src/: main.cpp
src/correction/: Correction.cpp  Correction.h
src/gui/: Interaction.cpp  Interaction.h  interaction.cpp  interaction.h
src/math/: Matrix.cpp  Matrix.h
src/misc/: Utils.cpp  Utils.h
src/trie/: Trie.cpp  Trie.h  TrieNode.h
src/word/: Language.cpp  Word.cpp  Word.h  WordList.h
tests/: MatrixTest.cpp  SpellingTest.cpp  TestsEnvironment.h  TrieTest.cpp  UtilsTest.cpp  WordTest.cpp
